generate extra models from master record definition