@@ -19,7 +19,7 @@ import org.eclipse.collections.api.list.MutableList;
 import org.finos.legend.engine.language.pure.compiler.toPureGraph.PureModel;
 import org.finos.legend.engine.pure.code.core.PureCoreExtension;
 import org.finos.legend.engine.pure.code.core.PureCoreExtensionLoader;
-import org.finos.legend.pure.code.core.M2MJavaBindingPureCoreExtension;
+import org.finos.legend.pure.code.core.ServiceStoreJavaBindingPureCoreExtension;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -29,7 +29,7 @@ public class TestExtensionAvailable
     public void testServiceAvailable()
     {
         MutableList<PureCoreExtension> extensions =  PureCoreExtensionLoader.extensions();
-        Assert.assertEquals(1, extensions.selectInstancesOf(M2MJavaBindingPureCoreExtension.class).get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).size());
-        Assert.assertEquals("PlatformBindingExtension", extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
+        Assert.assertEquals(1, extensions.selectInstancesOf(ServiceStoreJavaBindingPureCoreExtension.class).get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).size());
+        Assert.assertEquals("PlatformBinding - LegendJava - ServiceStore", extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
     }
 }
